--- a/src/app/core/hogar/component/dialog-crear-hogar.scss
+++ b/src/app/core/hogar/component/dialog-crear-hogar.scss
@@ -34,6 +34,14 @@
 .dialog-body {
   display: grid;
   gap: 1rem;
+  animation: none;
+  overflow-y: auto;
+  scrollbar-width: none;
+}
+
+.dialog-body::-webkit-scrollbar {
+  width: 0;
+  height: 0;
 }
 
 mat-form-field {
